; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_proto80.c_PBI_PROTO80_Exit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_proto80.c_PBI_PROTO80_Exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PBI_PROTO80_enabled = common dso_local global i64 0, align 8
@proto80rom = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PBI_PROTO80_Exit() #0 {
  %1 = load i64, i64* @PBI_PROTO80_enabled, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i32, i32* @proto80rom, align 4
  %5 = call i32 @free(i32 %4)
  %6 = load i64, i64* @FALSE, align 8
  store i64 %6, i64* @PBI_PROTO80_enabled, align 8
  br label %7

7:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
